Renamed module de.evoal.core to de.evoal.core.main. Thus, this commut implements #2