@@ -10,15 +10,8 @@ fi
 cd $1
 
 set -x
-java -Dorg.jboss.logging.provider=slf4j\
-     -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=1044\
-     --module-path "${EVOALPATH}/modules/:$PLUGIN_PATHS" \
-     --add-modules ALL-MODULE-PATH \
-     --add-opens java.base/java.lang=guice \
-     --add-exports io.jenetics.base/io.jenetics.internal.math=de.evoal.core \
-     --add-exports io.jenetics.base/io.jenetics.internal.collection=de.evoal.core \
-     --add-exports io.jenetics.base/io.jenetics.internal.util=de.evoal.core \
-     -m de.evoal.core/de.evoal.core.main.Evoal \
+java -agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=1044\
+     $CLASSPATH \
      -Bcore:main=heuristic-search \
      "-Bcore:optimisation-configuration-file=$2" \
      "-Bsurrogate:configuration-file=$3" \
